--- a/Ex02/app/src/main/AndroidManifest.xml
+++ b/Ex02/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Subactivity"
+            android:theme="@style/Theme.AppCompat.Dialog"
+            />
     </application>
 
 </manifest>
