--- a/Ex08/app/src/main/AndroidManifest.xml
+++ b/Ex08/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Ex07"
+        android:theme="@style/Theme.Ex04"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -21,8 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChilldActivity" />
-        <activity android:name=".Activity2" />
+        <activity android:name=".CallPhoneActivity">
+
+        </activity>
+        <activity android:name=".SendSMSActivity"/>
     </application>
 
 </manifest>
